# sherlock-challenge

./: .gitignore  ARCHITECTURE.md  EVALUATION.md  Macintosh HD  README.md  pyproject.toml  requirements.txt
api/: main.py
demo/: dashboard.py  simulator.py
demo/scenarios/: 01_normal_interview.json  02_macbook_pro.json  03_nickname_wrong_metadata.json  04_multiple_interviewers_observer.json  05_name_change.json  06_missing_metadata.json
src/sherlock/: __init__.py  engine.py  explainer.py  fusion.py  models.py
src/sherlock/signals/: __init__.py  base.py  device_name.py  interviewer_exclusion.py  join_order.py  name_match.py  observer_silence.py  screen_share.py  speaking_pattern.py  transcript_role.py  webcam.py
tests/: test_engine.py
