[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sherlock-candidate-id"
version = "0.1.0"
description = "Real-time interview candidate identification for Sherlock"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "rapidfuzz>=3.6.0",
    "streamlit>=1.31.0",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
    "openai>=1.12.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
